// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test message reducers should test DASHBOARD STATE 1`] = `
Object {
  "body": undefined,
  "dashboardstate": undefined,
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test INBOX_SUCCESS 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": undefined,
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test LOADING 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": true,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test MESSAGE_SUCCESS 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "message sent successfully",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test SENDING 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": true,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test SENT_SUCCESS 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": undefined,
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test UNAUTHENTICATE 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": Array [],
}
`;

exports[`test message reducers should test UNREAD_SUCCESS 1`] = `
Object {
  "body": "viewMessages",
  "dashboardstate": "Inbox",
  "errors": Object {},
  "inbox": Array [],
  "isAuthenticated": false,
  "isLoading": false,
  "messageError": "",
  "messageSuccess": "",
  "receiver": Object {},
  "sender": Object {},
  "sending": false,
  "sent": Array [],
  "specificMessage": Object {},
  "unread": undefined,
}
`;
